:bug: Fix text align on amount field in Send module

--- a/src/components/converter/converter.css
+++ b/src/components/converter/converter.css
@@ -9,6 +9,10 @@
   --fee-color: var(--color-grayscale-dark);
 }
 
+.input input {
+  padding-right: 120px;
+}
+
 .form {
   position: relative;
   margin-bottom: 15px;
